--- a/email-writer-sb/src/main/resources/application.properties
+++ b/email-writer-sb/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=email-writer-sb
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
-gemini.api.key=AIzaSyBlJDlATLqHoHwp5ks_elvfhLS1X9QluLI
+gemini.api.url=${GEMINI_URL}
+gemini.api.key=${GEMINI_KEY}
