--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -24,5 +24,5 @@ jobs:
         run: npm install
 
       - name: Build frontend
-        working-directory: frontend
+        working-directory: email-writer-react
         run: npm run build
