fix: secret keys fixed

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -12,6 +12,10 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
+        env:
+          GEMINI_URL: ${{ secrets.GEMINI_URL }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+
         steps: 
         - name: Checkout code
           uses: actions/checkout@v4
